testsuite/positive/Issue-1101.n
using System;
using System.Console;

public module Program
{
  public F[T, V](q : list[T * V],
                 _pred : T * V -> bool) : list[T * V]
  {
    WriteLine("First F");
    q
  }

  public F[T](q : list[T],
              _pred : T * int -> bool) : list[T]
  { 
    WriteLine("Second F");
    q
  }

  Main() : void
  {
    def x = [(1, 2), (2, 3)];
    _ = F(x, p => p[0] > 1);
  }
}
/*
BEGIN-OUTPUT
First F
END-OUTPUT
*/